# AuraEngine

./: CMakeLists.txt  README.md  auramainwindow.h  enginecore.cpp  enginecore.h  main.cpp
App/: CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.h
Core/: CMakeLists.txt  EngineConstValue.hpp  EngineRef.hpp  systemobject.cpp  systemobject.h  systemstateobject.cpp  systemstateobject.h
DATA/: AuraUIConstValue.h  constvalue.cpp  constvalue.h
DATA/BaseClass/: baseclass.h  componentobject.cpp  componentobject.h  demosystemobject.cpp  demosystemobject.h  engineinfomation.cpp  engineinfomation.h  gamedemo.cpp  gamedemo.h  gameobject.cpp  gameobject.h  instructioncontext.cpp  instructioncontext.h  instructionfunctioninfomation.cpp  instructionfunctioninfomation.h  instructionobject.cpp  instructionobject.h  objectitem.cpp  objectitem.h  scriptobjectlua.cpp  scriptobjectlua.h  systemobject.cpp  systemobject.h  uiwidget.cpp  uiwidget.h
DATA/Entity/: testcharacter.cpp  testcharacter.h  testground.cpp  testground.h
DATA/Item/: itemhpbar.cpp  itemhpbar.h
DATA/Model/: model2dcollision.cpp  model2dcollision.h  model2dhpbar.cpp  model2dhpbar.h  model2ditem.cpp  model2ditem.h  model2dmove.cpp  model2dmove.h  model2dpix.cpp  model2dpix.h  modelbattlebase.cpp  modelbattlebase.h  modelscript.cpp  modelscript.h
DEMO/: testdemo.cpp  testdemo.h
EngineCore/: CMakeLists.txt  enginecore.cpp  enginecore.h
Resource/Demo/TestDemo/: TestDemoConfig.json
Resource/Demo/TestDemo/script/: test.lua
System/: CMakeLists.txt
TOOL/DemoSystems/: demobattlesystem.cpp  demobattlesystem.h  demoitemrendersystem.cpp  demoitemrendersystem.h  demomovesystem.cpp  demomovesystem.h  demophysicalsystem.cpp  demophysicalsystem.h
TOOL/EngineTool/: enginechecktool.cpp  enginechecktool.h  enginedragtool.cpp  enginedragtool.h
TOOL/QtTool/: aurapropertytool.cpp  aurapropertytool.h
TOOL/SafetyTool/: openssltool.cpp  openssltool.h  serialnumbermanager.cpp  serialnumbermanager.h
TOOL/Systems/: gamesystem.cpp  gamesystem.h  instructionsystem.cpp  instructionsystem.h  rendersystem.cpp  rendersystem.h  scriptsystem.cpp  scriptsystem.h  sourcesystem.cpp  sourcesystem.h  systemstatemachine.cpp  systemstatemachine.h  systemstateobject.cpp  systemstateobject.h  uisystem.cpp  uisystem.h
TOOL/Template/: CheckTool.hpp
ThirdLibrary/AuraLibrary/: AuraLibraryConfig.cmake  AuraLibraryTargets-Import.cmake  AuraLibraryTargets.cmake
ThirdLibrary/AuraLibrary/include/: AuraComponentUI.h  AuraLibrary.h  aurauifactory.h
ThirdLibrary/AuraLibrary/include/Aura2DChart/: Aura2DChart.h  aurachartqcp.h
ThirdLibrary/AuraLibrary/include/Aura3DGraphics/: Aura3DGraphics.h
ThirdLibrary/AuraLibrary/include/AuraTemplate/: CheckCopyTool.hpp  Entity.hpp  IMPL.hpp
ThirdLibrary/AuraLibrary/include/AuraTool/: auraopenssltool.h  aurapythontool.h  fishswarmalgorithmtool.h
ThirdLibrary/AuraLibrary/include/AuraUIWidget/: AuraUIConstValue.h  UIHeader.h  auracardlabel.h  auraheadbarnormal.h  aurapropertyselectbox.h  aurarubberband.h  aurastartwidgetnormal.h  auratoolbutton.h  auratreewidget.h  aurauifunction.h  aurawidgetdelegate.h  hoverlightbtn.h  labelboxwidget.h  uistylemanager.h  uiwidget2c.hpp
ThirdLibrary/AuraLibrary/include/QCustomPlot/: qcustomplot.h
ThirdLibrary/AuraLibrary/include/SARibbon/: SARibbon.h
ThirdLibrary/AuraLibrary/resource/script/: example.py  example_module.py
ThirdLibrary/AuraLibrary/resource/shader/: boundingBox.frag  column.geom  coordinateArrow.geom  coordinate_fix.vert  fixRender_coordinate.vert  geometry.frag  geometry.vert  linkGeometry.frag  linkGeometry.vert  linkTorus.geom  model.frag  origin.frag  shapes.vert
UI/completeUI/: editgameeditwidget.cpp  editgameeditwidget.h  editgameshowwidget.cpp  editgameshowwidget.h  editinstructioneditwidget.cpp  editinstructioneditwidget.h  editsourceeidtwidget.cpp  editsourceeidtwidget.h
UI/componentUI/: argumenteditwidget.cpp  argumenteditwidget.h  auramenubar.cpp  auramenubar.h  aurastatelabel01.cpp  aurastatelabel01.h  auraswitchwidget01.cpp  auraswitchwidget01.h  cardlabel.cpp  cardlabel.h  checkboxlistwidget.cpp  checkboxlistwidget.h  clicklabel.h  componenteditwidget.cpp  componenteditwidget.h  demoeditwidget.cpp  demoeditwidget.h  gameobjecteditwidget.cpp  gameobjecteditwidget.h  gameobjectsampleeditwidget.cpp  gameobjectsampleeditwidget.h  gameshowview.cpp  gameshowview.h  itemeditwidget.cpp  itemeditwidget.h  propertyeditwidget.cpp  propertyeditwidget.h  propertytoolloadfilepathwidget.cpp  propertytoolloadfilepathwidget.h  propertytoolwidget.cpp  propertytoolwidget.h  selectboxlistwidget.cpp  selectboxlistwidget.h  wheelslidewidget.cpp  wheelslidewidget.h
src/: CMakeLists.txt
src/App/: CMakeLists.txt
thirdPart/AuraLibrary/: AuraLibraryConfig.cmake  AuraLibraryTargets-Debug.cmake  AuraLibraryTargets-Import.cmake  AuraLibraryTargets-Release.cmake  AuraLibraryTargets.cmake
thirdPart/AuraLibrary/include/: AuraComponentUI.h  AuraGlobal.h  AuraLibrary.h
thirdPart/AuraLibrary/include/Aura2DChart/: aurachartqcp.h
thirdPart/AuraLibrary/include/Aura3DGraphics/: Aura3DGraphics.h  AuraOpenGLEnumValue.h  auraopenglcamera.h  auraopenglcolumn.h  auraopenglcube.h  auraopenglgeometry.h  auraopenglgeometrybuilder.h  auraopenglgraphicsitem.h  auraopenglgraphicsscene.h  auraopenglgraphicsview.h  auraopenglmodel.h  auraopenglmodelmanager.h  auraopenglshadermanager.h  auraopenglsyntheticgeometry.h  auraopenglunitmanager.h  auraopenglwidget.h  auraopenglwindow.h
thirdPart/AuraLibrary/include/AuraAlgorithm/: auraalgorithmtool.h  fishswarmalgorithmtool.h
thirdPart/AuraLibrary/include/AuraPixture/: aurapixtool.h
thirdPart/AuraLibrary/include/AuraProperty/: aurapropertytool.h
thirdPart/AuraLibrary/include/AuraTemplate/: CheckMemberTool.hpp  Property.hpp  Singleton.hpp  TypeEraser.hpp
thirdPart/AuraLibrary/include/AuraTool/: AuraTool.h  auraalgorithmtool.h  aurafiletool.h  auramachinetool.h  auraopenssltool.h  aurapixtool.h  aurapropertytool.h  auraserialnumbertool.h  fishswarmalgorithmtool.h
thirdPart/AuraLibrary/include/AuraUIWidget/: AuraUIWidget.h  (+39 more)
(+49 files in other folders)
